@@ -6,5 +6,6 @@ name(		'autodie');
 all_from(	'lib/autodie.pm');
 test_requires(	'Test::More');
 requires(	'perl' => '5.10.0');
+recommends(	'IPC::System::Simple' => '0.12'); # For autodying system()
 
 WriteAll();
